issue-3699, Visible tfoot

--- a/css/refactor/themes/business/parts/tables.less
+++ b/css/refactor/themes/business/parts/tables.less
@@ -102,6 +102,19 @@ div.table {
         border-bottom: @table-body-border-color;
       }
     }
+    tfoot {
+      display: table-row-group;
+      tr {
+        th {
+          text-align: left;
+          font-weight: normal;
+          color: black;
+          border-bottom: @table-body-border-color;
+          // Override base-skeleton !important
+          border-color: rgba(0, 0, 0, 0.1) !important;
+        }
+      }
+    }
     //TDs
     td {
       //#content>#table>#data>.style(any; any);
